// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profiling CommitDetails should be collected for each commit: CommitDetails commitIndex: 0 1`] = `
Object {
  "actualDurations": Map {
    1 => 14,
    2 => 14,
    3 => 2,
    4 => 2,
  },
  "commitIndex": 0,
  "interactions": Array [],
  "rootID": 1,
}
`;

exports[`profiling CommitDetails should be collected for each commit: CommitDetails commitIndex: 1 1`] = `
Object {
  "actualDurations": Map {
    3 => 2,
    4 => 2,
    5 => 2,
    2 => 16,
    1 => 16,
  },
  "commitIndex": 1,
  "interactions": Array [],
  "rootID": 1,
}
`;

exports[`profiling CommitDetails should be collected for each commit: CommitDetails commitIndex: 2 1`] = `
Object {
  "actualDurations": Map {
    3 => 2,
    2 => 12,
    1 => 12,
  },
  "commitIndex": 2,
  "interactions": Array [],
  "rootID": 1,
}
`;

exports[`profiling CommitDetails should be collected for each commit: CommitDetails commitIndex: 3 1`] = `
Object {
  "actualDurations": Map {
    2 => 10,
    1 => 10,
  },
  "commitIndex": 3,
  "interactions": Array [],
  "rootID": 1,
}
`;

exports[`profiling CommitDetails should be collected for each commit: exported data 1`] = `
Object {
  "commitDetails": Array [
    Object {
      "actualDurations": Array [
        1,
        14,
        2,
        14,
        3,
        2,
        4,
        2,
      ],
      "commitIndex": 0,
      "interactions": Array [],
      "rootID": 1,
    },
    Object {
      "actualDurations": Array [
        3,
        2,
        4,
        2,
        5,
        2,
        2,
        16,
        1,
        16,
      ],
      "commitIndex": 1,
      "interactions": Array [],
      "rootID": 1,
    },
    Object {
      "actualDurations": Array [
        3,
        2,
        2,
        12,
        1,
        12,
      ],
      "commitIndex": 2,
      "interactions": Array [],
      "rootID": 1,
    },
    Object {
      "actualDurations": Array [
        2,
        10,
        1,
        10,
      ],
      "commitIndex": 3,
      "interactions": Array [],
      "rootID": 1,
    },
  ],
  "interactions": Object {
    "interactions": Array [],
    "rootID": 1,
  },
  "profilingOperations": Map {
    1 => Array [
      Array [
        1,
        1,
        17,
        6,
        80,
        97,
        114,
        101,
        110,
        116,
        5,
        67,
        104,
        105,
        108,
        100,
        1,
        48,
        1,
        49,
        1,
        1,
        11,
        1,
        1,
        4,
        1,
        14000,
        1,
        2,
        5,
        1,
        0,
        1,
        0,
        4,
        2,
        14000,
        1,
        3,
        5,
        2,
        2,
        2,
        3,
        4,
        3,
        2000,
        1,
        4,
        5,
        2,
        2,
        2,
        4,
        4,
        4,
        2000,
      ],
      Array [
        1,
        1,
        8,
        5,
        67,
        104,
        105,
        108,
        100,
        1,
        50,
        1,
        5,
        5,
        2,
        2,
        1,
        2,
        4,
        5,
        2000,
        4,
        2,
        16000,
        3,
        2,
        3,
        3,
        4,
        5,
        4,
        1,
        16000,
      ],
      Array [
        1,
        1,
        0,
        2,
        2,
        5,
        4,
        4,
        2,
        12000,
        4,
        1,
        12000,
      ],
      Array [
        1,
        1,
        0,
        2,
        1,
        3,
        4,
        2,
        10000,
        4,
        1,
        10000,
      ],
    ],
  },
  "profilingSnapshots": Map {
    1 => Map {},
  },
  "profilingSummary": Object {
    "commitDurations": Array [
      14,
      16,
      12,
      10,
    ],
    "commitTimes": Array [
      14,
      30,
      42,
      52,
    ],
    "initialTreeBaseDurations": Array [],
    "interactionCount": 0,
    "rootID": 1,
  },
  "version": 1,
}
`;

exports[`profiling FiberCommits should be collected for each rendered fiber: FiberCommits: element 2 1`] = `
Object {
  "commitDurations": Array [
    0,
    12,
    1,
    14,
    2,
    16,
  ],
  "fiberID": 2,
  "rootID": 1,
}
`;

exports[`profiling FiberCommits should be collected for each rendered fiber: FiberCommits: element 3 1`] = `
Object {
  "commitDurations": Array [
    0,
    2,
    1,
    2,
    2,
    2,
  ],
  "fiberID": 3,
  "rootID": 1,
}
`;

exports[`profiling FiberCommits should be collected for each rendered fiber: FiberCommits: element 4 1`] = `
Object {
  "commitDurations": Array [
    1,
    2,
    2,
    2,
  ],
  "fiberID": 4,
  "rootID": 1,
}
`;

exports[`profiling FiberCommits should be collected for each rendered fiber: FiberCommits: element 5 1`] = `
Object {
  "commitDurations": Array [
    2,
    2,
  ],
  "fiberID": 5,
  "rootID": 1,
}
`;

exports[`profiling FiberCommits should be collected for each rendered fiber: exported data 1`] = `
Object {
  "commitDetails": Array [
    Object {
      "actualDurations": Array [
        1,
        12,
        2,
        12,
        3,
        2,
      ],
      "commitIndex": 0,
      "interactions": Array [],
      "rootID": 1,
    },
    Object {
      "actualDurations": Array [
        3,
        2,
        4,
        2,
        2,
        14,
        1,
        14,
      ],
      "commitIndex": 1,
      "interactions": Array [],
      "rootID": 1,
    },
    Object {
      "actualDurations": Array [
        3,
        2,
        4,
        2,
        5,
        2,
        2,
        16,
        1,
        16,
      ],
      "commitIndex": 2,
      "interactions": Array [],
      "rootID": 1,
    },
  ],
  "interactions": Object {
    "interactions": Array [],
    "rootID": 1,
  },
  "profilingOperations": Map {
    1 => Array [
      Array [
        1,
        1,
        15,
        6,
        80,
        97,
        114,
        101,
        110,
        116,
        5,
        67,
        104,
        105,
        108,
        100,
        1,
        48,
        1,
        1,
        11,
        1,
        1,
        4,
        1,
        12000,
        1,
        2,
        5,
        1,
        0,
        1,
        0,
        4,
        2,
        12000,
        1,
        3,
        5,
        2,
        2,
        2,
        3,
        4,
        3,
        2000,
      ],
      Array [
        1,
        1,
        8,
        5,
        67,
        104,
        105,
        108,
        100,
        1,
        49,
        1,
        4,
        5,
        2,
        2,
        1,
        2,
        4,
        4,
        2000,
        4,
        2,
        14000,
        3,
        2,
        2,
        3,
        4,
        4,
        1,
        14000,
      ],
      Array [
        1,
        1,
        8,
        5,
        67,
        104,
        105,
        108,
        100,
        1,
        50,
        1,
        5,
        5,
        2,
        2,
        1,
        2,
        4,
        5,
        2000,
        4,
        2,
        16000,
        3,
        2,
        3,
        3,
        4,
        5,
        4,
        1,
        16000,
      ],
    ],
  },
  "profilingSnapshots": Map {
    1 => Map {},
  },
  "profilingSummary": Object {
    "commitDurations": Array [
      12,
      14,
      16,
    ],
    "commitTimes": Array [
      12,
      26,
      42,
    ],
    "initialTreeBaseDurations": Array [],
    "interactionCount": 0,
    "rootID": 1,
  },
  "version": 1,
}
`;

exports[`profiling Interactions should be collected for every traced interaction: Interactions 1`] = `
Array [
  Object {
    "__count": 1,
    "commits": Array [
      0,
    ],
    "id": 0,
    "name": "mount: one child",
    "timestamp": 0,
  },
  Object {
    "__count": 0,
    "commits": Array [
      1,
    ],
    "id": 1,
    "name": "update: two children",
    "timestamp": 12,
  },
]
`;

exports[`profiling Interactions should be collected for every traced interaction: exported data 1`] = `
Object {
  "commitDetails": Array [
    Object {
      "actualDurations": Array [
        1,
        12,
        2,
        12,
        3,
        2,
      ],
      "commitIndex": 0,
      "interactions": Array [
        Object {
          "__count": 1,
          "id": 0,
          "name": "mount: one child",
          "timestamp": 0,
        },
      ],
      "rootID": 1,
    },
    Object {
      "actualDurations": Array [
        3,
        2,
        4,
        2,
        2,
        14,
        1,
        14,
      ],
      "commitIndex": 1,
      "interactions": Array [
        Object {
          "__count": 0,
          "id": 1,
          "name": "update: two children",
          "timestamp": 12,
        },
      ],
      "rootID": 1,
    },
  ],
  "interactions": Object {
    "interactions": Array [
      Object {
        "__count": 1,
        "commits": Array [
          0,
        ],
        "id": 0,
        "name": "mount: one child",
        "timestamp": 0,
      },
      Object {
        "__count": 0,
        "commits": Array [
          1,
        ],
        "id": 1,
        "name": "update: two children",
        "timestamp": 12,
      },
    ],
    "rootID": 1,
  },
  "profilingOperations": Map {
    1 => Array [
      Array [
        1,
        1,
        15,
        6,
        80,
        97,
        114,
        101,
        110,
        116,
        5,
        67,
        104,
        105,
        108,
        100,
        1,
        48,
        1,
        1,
        11,
        1,
        1,
        4,
        1,
        12000,
        1,
        2,
        5,
        1,
        0,
        1,
        0,
        4,
        2,
        12000,
        1,
        3,
        5,
        2,
        2,
        2,
        3,
        4,
        3,
        2000,
      ],
      Array [
        1,
        1,
        8,
        5,
        67,
        104,
        105,
        108,
        100,
        1,
        49,
        1,
        4,
        5,
        2,
        2,
        1,
        2,
        4,
        4,
        2000,
        4,
        2,
        14000,
        3,
        2,
        2,
        3,
        4,
        4,
        1,
        14000,
      ],
    ],
  },
  "profilingSnapshots": Map {
    1 => Map {},
  },
  "profilingSummary": Object {
    "commitDurations": Array [
      12,
      14,
    ],
    "commitTimes": Array [
      12,
      26,
    ],
    "initialTreeBaseDurations": Array [],
    "interactionCount": 2,
    "rootID": 1,
  },
  "version": 1,
}
`;

exports[`profiling ProfilingSummary should be collected for each commit: ProfilingSummary 1`] = `
Object {
  "commitDurations": Array [
    16,
    12,
    10,
  ],
  "commitTimes": Array [
    16,
    28,
    38,
  ],
  "initialTreeBaseDurations": Map {
    1 => 14,
    2 => 14,
    3 => 2,
    4 => 2,
  },
  "interactionCount": 0,
  "rootID": 1,
}
`;

exports[`profiling ProfilingSummary should be collected for each commit: exported data 1`] = `
Object {
  "commitDetails": Array [
    Object {
      "actualDurations": Array [
        3,
        2,
        4,
        2,
        5,
        2,
        2,
        16,
        1,
        16,
      ],
      "commitIndex": 0,
      "interactions": Array [],
      "rootID": 1,
    },
    Object {
      "actualDurations": Array [
        3,
        2,
        2,
        12,
        1,
        12,
      ],
      "commitIndex": 1,
      "interactions": Array [],
      "rootID": 1,
    },
    Object {
      "actualDurations": Array [
        2,
        10,
        1,
        10,
      ],
      "commitIndex": 2,
      "interactions": Array [],
      "rootID": 1,
    },
  ],
  "interactions": Object {
    "interactions": Array [],
    "rootID": 1,
  },
  "profilingOperations": Map {
    1 => Array [
      Array [
        1,
        1,
        8,
        5,
        67,
        104,
        105,
        108,
        100,
        1,
        50,
        1,
        5,
        5,
        2,
        2,
        1,
        2,
        4,
        5,
        2000,
        4,
        2,
        16000,
        3,
        2,
        3,
        3,
        4,
        5,
        4,
        1,
        16000,
      ],
      Array [
        1,
        1,
        0,
        2,
        2,
        5,
        4,
        4,
        2,
        12000,
        4,
        1,
        12000,
      ],
      Array [
        1,
        1,
        0,
        2,
        1,
        3,
        4,
        2,
        10000,
        4,
        1,
        10000,
      ],
    ],
  },
  "profilingSnapshots": Map {
    1 => Map {
      1 => Object {
        "children": Array [
          2,
        ],
        "displayName": null,
        "id": 1,
        "key": null,
      },
      2 => Object {
        "children": Array [
          3,
          4,
        ],
        "displayName": "Parent",
        "id": 2,
        "key": null,
      },
      3 => Object {
        "children": Array [],
        "displayName": "Child",
        "id": 3,
        "key": "0",
      },
      4 => Object {
        "children": Array [],
        "displayName": "Child",
        "id": 4,
        "key": "1",
      },
    },
  },
  "profilingSummary": Object {
    "commitDurations": Array [
      16,
      12,
      10,
    ],
    "commitTimes": Array [
      16,
      28,
      38,
    ],
    "initialTreeBaseDurations": Array [
      1,
      14,
      2,
      14,
      3,
      2,
      4,
      2,
    ],
    "interactionCount": 0,
    "rootID": 1,
  },
  "version": 1,
}
`;
